--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -12,8 +12,9 @@
   "devDependencies": {
     "@openswe/typescript-config": "workspace:*",
     "@types/bun": "latest",
-    "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "prisma": "^6.19.0",
     "typescript": "^5.6.3"
   },
   "peerDependencies": {
@@ -27,6 +28,7 @@
     "@octokit/rest": "^22.0.1",
     "@octokit/webhooks": "^14.1.3",
     "@openswe/shared": "workspace:*",
+    "@prisma/client": "^6.19.0",
     "@types/jsonwebtoken": "^9.0.10",
     "axios": "^1.13.2",
     "cors": "^2.8.5",
