--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -14,7 +14,7 @@
     "@types/bun": "latest",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "prisma": "^6.19.0",
+    "prisma": "^7.0.0",
     "typescript": "^5.6.3"
   },
   "peerDependencies": {
@@ -28,14 +28,17 @@
     "@octokit/rest": "^22.0.1",
     "@octokit/webhooks": "^14.1.3",
     "@openswe/shared": "workspace:*",
-    "@prisma/client": "^6.19.0",
+    "@prisma/adapter-pg": "^7.0.0",
+    "@prisma/client": "^7.0.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/pg": "^8.15.6",
     "axios": "^1.13.2",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "jwt": "^0.2.0"
+    "jwt": "^0.2.0",
+    "pg": "^8.16.3"
   }
 }
