--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -10,8 +10,11 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@e2b/code-interpreter": "^2.3.1",
     "@openswe/shared": "workspace:*",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.14",
     "@tanstack/react-query": "^5.83.0",
     "class-variance-authority": "^0.7.1",
@@ -19,6 +22,7 @@
     "lucide-react": "^0.462.0",
     "next": "16.0.1",
     "react": "19.2.0",
+    "react-diff-viewer-continued": "^3.4.0",
     "react-dom": "19.2.0",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
